putting login info in

--- a/templates/kurumsal.html
+++ b/templates/kurumsal.html
@@ -137,7 +137,7 @@
                         You can fill in the HR pre-application form and send it to us. Our Human Resources Department
                         will get back to you if needed.
                         {% endif %}</p>
-                    <button id="sidecardbutton" type="button" class="btn btn-danger btn-sm">{% if session['language'] ==
+                    <button id="sidecardbutton" type="button" class="btn btn-danger btn-sm" disabled>{% if session['language'] ==
                         0 %}
                         İK BAŞVURU FORMU
                         {% else %}
