--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -84,7 +84,7 @@
                 {% else %}
                 Please visit this section for information about Busbar Systems between 25A - 6300A, produced in
                 accordance with standards and high quality
-                {% endif %}<br><br>
+                {% endif %}<br>
                 <a href="/products#product1">AB-E {{ translation[6] }} BUSBAR (25A-63A)</a> <br>
                 <a href="/products#product2">SP-H {{ translation[7] }} BUSBAR (100A-160A)</a> <br>
                 <a href="/products#product3">MP-H {{ translation[8] }} BUSBAR (160A-600A)</a> <br>
@@ -111,14 +111,9 @@
                   {% endif %}</h6>
                 <p>{% if session['language'] == 0 %}
                   Satış öncesi ve satış sonrası hizmetleri mükemmel bir düzeyde vermek, DTM Elektroteknik A.Ş. için çok
-                  önemlidir. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta impedit, optio
-                  similique esse nemo provident temporibus officia sed illum tenetur labore, nobis quasi explicabo,
-                  cupiditate velit veniam sint veritatis!
+                  önemlidir.
                   {% else %}
-                  Satış öncesi ve satış sonrası hizmetleri mükemmel bir düzeyde vermek, DTM Elektroteknik A.Ş. için çok
-                  önemlidir. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta impedit, optio
-                  similique esse nemo provident temporibus officia sed illum tenetur labore, nobis quasi explicabo,
-                  cupiditate velit veniam sint veritatis!
+                  It is at most importance for DTM Elektroteknik to provide a flawless service both before and after the sales.
                   {% endif %}</p>
               </div>
             </div>
