--- a/static/css/dtm.css
+++ b/static/css/dtm.css
@@ -44,7 +44,7 @@ a:hover {
   align-items: center;
   text-align: center;
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url();
+  background-image: linear-gradient(rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0.5)), url("../img/busbar.jpg");
   background-color: #333;
   background-size: cover;
   background-position: center center;
@@ -53,7 +53,7 @@ a:hover {
 }
 
 .hero h1 {
-  font-size: 5em;
+  font-size: 55px;
   margin-top: 0;
   margin-bottom: 0.5em;
 }
@@ -65,7 +65,6 @@ a:hover {
   margin: 0 auto 0 auto;
   color: white;
   text-decoration: none;
-  font-size: 1.5em;
   background-color: #ae1227;
   transition: scale 100ms ease;
 }
