--- a/templates/nav.html
+++ b/templates/nav.html
@@ -35,7 +35,7 @@
                                 value="{% if session['language'] == 0 %}1{% else %}0{% endif %}"></input>
                             <button type="submit" id="switchlang">
                                 <img id="langimg"
-                                    src="../static/img/flag-{% if session['language'] == 0 %}eng{% else %}tr{% endif %}.png">
+                                    src="../static/img/flag-{% if session['language'] == 0 %}tr{% else %}eng{% endif %}.png">
                             </button>
                         </form>
                     </li>
