post release news update

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -28,6 +28,7 @@
                             SERVICES
                             {% endif %}</a></li>
                     <li><a href="/referanslar">{{ translation[13] }}</a></li>
+                    <li><a href="/sertifikalar">{{ translation[14]}}</a></li>
                     <li><a href="/iletisim"><i class="fa-solid fa-envelope-open-text"></i></a></li>
                     <li>
                         <form action="/set_lang" method="post">
