--- a/templates/haberler.html
+++ b/templates/haberler.html
@@ -18,8 +18,7 @@
             {% endif %}</p>
     </div>
     <div class="container-fluid">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem incidunt iste quos nemo, eius atque
-            magni, ea pariatur blanditiis dolore quisquam debitis ut veniam itaque. Ullam praesentium unde iure nihil.
+        <h1>
 
         </h1>
         <div class="row ">
@@ -38,7 +37,7 @@
                             {% endif %}</p>
                     </div>
                     <div class="flip-card-back">
-                        <a href="#" title="" class="btn btn-danger">Light + Building;
+                        <a href="/light2022" target="_blank" class="btn btn-danger">Light + Building;
                             {% if session['language'] == 0 %}
                             Fuarı
                             {% else %}
@@ -52,7 +51,7 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <h2>30.11.2021</h2>
-                        <img src="../static/img/news/display/1.jpg" alt="">
+                        <img src="../static/img/news/display/1.png" alt="">
                         <p>{% if session['language'] == 0 %}
                             10-13 Kasım 2021 tarihleri arasında Tüyap Fuar ve Kongre Merkezi'nde WIN EURASIA 2021
                             fuarına katılım sağladık.
@@ -64,7 +63,7 @@
                     <div class="flip-card-back">
                         <a href="#" title="" class="btn">
                             WIN EURASIA 2021
-                            </a>
+                        </a>
                     </div>
                 </div>
             </div>
