--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -207,8 +207,8 @@
       </section>
       <!-- ACCORDION COL END-->
       <!-- NEWS-->
-      <div class="newsmain col-lg-4 col-md-4 col-sm-8 offset-sm-2 offset-md-0 col-xs-12 container">
-        
+      <div class="newsmain container">
+        <div class="col-xs-12 col-sm-8 offset-sm-2 offset-md-0 col-md-6 col-lg-4 ">
           <a href="/haberler">
             <div class="card-flyer align-self-center justify-content-center ">
               <div class="text-box">
@@ -226,7 +226,7 @@
               </div>
             </div>
           </a>
-        
+        </div> 
       </div>
       <!-- OWL CAROUSEL START-->
       <div class="col-lg-4 col-md-4 col-sm-8 offset-sm-2 offset-md-0 col-xs-12 ">
