uploading turkish catalog

--- a/templates/products.html
+++ b/templates/products.html
@@ -45,7 +45,7 @@
             <li>Renkli fiş seçeneği</li>
           </ul>
         </ul>
-        <button type="button" class="btn btn-danger btn-sm btn-cata"><a href=""></a>AB-E ürün kataloğu indir</button>
+        <a href="../static/img/catalog/AB-E.pdf" download="DTM AB-E Serisi 25A-63A"><button type="button" class="btn btn-danger btn-sm btn-cata">AB-E ürün kataloğu indir</button></a>
         {% else %}
         <h2 class="align-self-center py-2">AB-E LIGHTNING BUSBAR (25A - 63A)</h2>
         <ul>
@@ -71,7 +71,7 @@
             <li>Renkli fiş seçeneği</li>
           </ul>
         </ul>
-        <button type="button" class="btn btn-danger btn-sm btn-cata"><a href=""></a>Download AB-E Catalog</button>
+        <a href="../static/img/catalog/AB-E.pdf" download="DTM AB-E Series 23-63A"><button type="button" class="btn btn-danger btn-sm btn-cata">Download AB-E Catalog</button></a>
         {% endif %}
 
       </div>
@@ -139,7 +139,7 @@
             </ul>
           </li>
         </ul>
-        <button type="button" class="btn btn-danger btn-sm btn-cata"><a href=""></a>SP-H ürün kataloğu indir</button>
+        <a href="../static/img/catalog/SP-H.pdf" download="DTM SP-H Serisi 100A-160A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">SP-H ürün kataloğu indir</button></a>
         {% else %}
         <h2 class="align-self-center py-2">SP-H LOW POWER BUSBAR (100A - 160A)</h2><br>
         <ul>
@@ -165,7 +165,7 @@
             </ul>
           </li>
         </ul>
-        <button type="button" class="btn btn-danger btn-sm btn-cata"><a href=""></a>Download SP-H Catalog</button>
+        <a href="../static/img/catalog/SP-H.pdf" download="DTM SP-H Series 100-160A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">Download SP-H Catalog</button></a>
         {% endif %}
       </div>
       <div class="col-sm-12  col-md-6 invisible">
@@ -230,7 +230,7 @@
             <li>Tek civata ile hızlı ek blok montajı</li>
           </ul>
         </ul>
-        <button type="button" class="btn btn-danger btn-sm btn-cata"><a href=""></a>MP-H ürün kataloğu indir</button>
+        <a href="../static/img/catalog/MP-H.pdf" download="DTM MP-H Serisi 160A-600A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">MP-H ürün kataloğu indir</button></a>
         {% else %}
         <h2 class="align-self-center py-2">MP-H MEDIUM POWER BUSBAR (160A - 600A)</h2><br>
         <ul>
@@ -255,7 +255,7 @@
             <li>Fast additional block assembly with one screw</li>
           </ul>
         </ul>
-        <button type="button" class="btn btn-danger btn-sm btn-cata"><a href=""></a>Download MP-H Catalog</button>
+        <a href="../static/img/catalog/MP-H.pdf" download="DTM MP-H Series 160-600A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">Download MP-H Catalog</button></a>
         {% endif %}
       </div>
       <div class="col-sm-12  col-md-6 invisible">
@@ -327,7 +327,7 @@
               ısı kolayca ortama transfer edilir</li>
           </ul>
         </ul>
-        <button type="button" class="btn btn-danger btn-sm btn-cata"><a href=""></a>HP-K ürün kataloğu indir</button>
+        <a href="../static/img/catalog/HP-K.pdf" download="DTM HP-K Serisi 400A-6300A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">HP-K ürün kataloğu indir</button></a>
         {% else %}
         <h2 class="align-self-center py-2">HP-K HIGH POWER BUSBAR (400A - 6300A)</h2><br>
         <ul>
@@ -359,7 +359,7 @@
               environment due to the absence of an air gap between the conductors and the body.</li>
           </ul>
         </ul>
-        <button type="button" class="btn btn-danger btn-sm btn-cata"><a href=""></a>Download HP-K Catalog</button>
+        <a href="../static/img/catalog/HP-K.pdf" download="HP-K Series 400-6300A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">Download HP-K Catalog</button></a>
         {% endif %}
       </div>
       <div class="col-sm-12  col-md-6 invisible">
