kvkk file and fixing typos on news page

--- a/templates/FOOT.html
+++ b/templates/FOOT.html
@@ -13,12 +13,12 @@
           <p>
             <br><br><br><br><br><br>
             © 2022 Copyright: {{ translation[17]}} <br>
-            <a class="text-reset " href="">{% if session['language'] == 0 %}
+            <a class="text-reset" href="../static/img/KVKK Aydınlatma metni.docx" download="KVKK Aydınlatma.docx">{% if session['language'] == 0 %}
               KVKK Aydınlatma Metni
               {% else %}
               KVKK Clarification Text
               {% endif %}</a><br>
-            <a class="text-reset " href="">{% if session['language'] == 0 %}
+            <a class="text-reset " href="../static/img/KVKK Veri Sorumlusuna Basvuru Formu.docx" download="KVKK Başvuru.docx">{% if session['language'] == 0 %}
               KVKK Veri Sorumlusuna Başvuru Formu
               {% else %}
               KVKK Contacting to Data Controller Form
