--- a/templates/haberler.html
+++ b/templates/haberler.html
@@ -51,7 +51,7 @@
                         <p>{% if session['language'] == 0 %}
                             Yalova ve Balıkesir Organize Sanayi Bölgelerinde yeni fabrikalarımızın inşaatına başladık.
                             {% else %}
-                            We started the construction of our new factories in Yalova and Balıkesir Organized Industrial Zones.
+                            We started the construction of our new factories in Yalova and Balikesir Organized Industrial Zones.
                             {% endif %}</p>
                     </div>
                     <div class="flip-card-back">
@@ -59,7 +59,7 @@
                         <a href="#" title="" class="btn btn-danger">{% if session['language'] == 0 %}
                             Yalova ve Balıkesir OSB
                             {% else %}
-                            Yalova & Balıkesir OSB
+                            Yalova & Balikesir OSB
                             {% endif %}</a>
                     </div>
                 </div>
