--- a/static/css/dtm.css
+++ b/static/css/dtm.css
@@ -914,6 +914,6 @@ footer {
 
 .newsmain {
   padding-top: 0 !important;
-  margin-left: auto;
+  margin-left: 0 !important;
   margin-right: 0 !important;
 }
