--- a/templates/home_alt.html
+++ b/templates/home_alt.html
@@ -99,14 +99,9 @@
                   {% endif %}</h6>
                 <p>{% if session['language'] == 0 %}
                   Satış öncesi ve satış sonrası hizmetleri mükemmel bir düzeyde vermek, DTM Elektroteknik A.Ş. için çok
-                  önemlidir. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta impedit, optio
-                  similique esse nemo provident temporibus officia sed illum tenetur labore, nobis quasi explicabo,
-                  cupiditate velit veniam sint veritatis!
+                  önemlidir.
                   {% else %}
-                  Satış öncesi ve satış sonrası hizmetleri mükemmel bir düzeyde vermek, DTM Elektroteknik A.Ş. için çok
-                  önemlidir. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat soluta impedit, optio
-                  similique esse nemo provident temporibus officia sed illum tenetur labore, nobis quasi explicabo,
-                  cupiditate velit veniam sint veritatis!
+                  It is at most importance for DTM Elektroteknik to provide a flawless service both before and after the sales.
                   {% endif %}</p>
               </div>
             </div>
@@ -211,9 +206,9 @@
                 <div class="text-container">
                   <h6 class="text-uppercase">{{ translation[15] }}</h6>
                   <p>{% if session['language'] == 0 %}
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda optio minima eum velit nam amet, exercitationem voluptatem vitae totam commodi repudiandae reiciendis accusamus placeat ex voluptatum nostrum saepe aliquid id?
+                    DTM Elektroteknik A.Ş Haberleri
                     {% else %}
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse provident nisi error distinctio recusandae odio fugiat quae illum blanditiis atque delectus, aut expedita dolorum eius laborum repellat numquam explicabo ea.
+                    DTM Electrotechnical Inc. News
                     {% endif %}</p>
                 </div>
               </div>
