--- a/templates/HEAD.html
+++ b/templates/HEAD.html
@@ -7,4 +7,4 @@
 <link href="../static/css/dtm.css" rel="stylesheet">
 <script src="../static/js/dtm.js"></script>
 <script src="https://kit.fontawesome.com/9f86d2bf15.js" crossorigin="anonymous"></script>
-<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+<!--<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>-->
