--- a/templates/products.html
+++ b/templates/products.html
@@ -18,7 +18,7 @@
   </div>
   <div class="container" id="productdisplay">
     <div class="row">
-      <div id="product1" class="col-sm-12 col-md-6 pt-4">
+      <div id="abe" class="col-sm-12 col-md-6 pt-4">
         <br><br><br><br><br><br>
         {% if session['language'] == 0 %}
         <h2 class="align-self-center py-2">AB-E AYDINLATMA BUSBAR (25A - 63A)</h2>
@@ -112,7 +112,7 @@
 
   <div class="container" id="productdisplay">
     <div class="row">
-      <div id="product2" class="col-sm-12  col-md-6 offset-md-0 ">
+      <div id="sph" class="col-sm-12  col-md-6 offset-md-0 ">
         <br><br><br><br><br><br>
         {% if session['language'] == 0 %}
         <h2 class="align-self-center py-2">SP-H ALÇAK GÜÇ BUSBAR (100A - 160A)</h2><br>
@@ -204,7 +204,7 @@
   </hr>
   <div class="container" id="productdisplay">
     <div class="row">
-      <div id="product3" class="col-sm-12  col-md-6 offset-md-0">
+      <div id="mph" class="col-sm-12  col-md-6 offset-md-0">
         <br><br><br><br><br><br>
         {% if session['language'] == 0 %}
         <h2 class="align-self-center py-2">MP-H ORTA GÜÇ BUSBAR (160A - 600A)</h2><br>
@@ -294,7 +294,7 @@
   </hr>
   <div class="container" id="productdisplay">
     <div class="row">
-      <div id="product4" class="col-sm-12  col-md-6 offset-md-0">
+      <div id="hpk" class="col-sm-12  col-md-6 offset-md-0">
         <br><br><br><br><br><br>
         {% if session['language'] == 0 %}
         <h2 class="align-self-center py-2">HP-K YÜKSEK GÜÇ BUSBAR (400A - 6300A)</h2><br>
