mainpage large screen responsible fix for second row

--- a/templates/home_alt.html
+++ b/templates/home_alt.html
@@ -72,7 +72,7 @@
                 {% else %}
                 Please visit this section for information about Busbar Systems between 25A - 6300A, produced in
                 accordance with standards and high quality
-                {% endif %}<br><br>
+                {% endif %}<br>
                 <a href="/products#product1">AB-E {{ translation[6] }} BUSBAR (25A-63A)</a> <br>
                 <a href="/products#product2">SP-H {{ translation[7] }} BUSBAR (100A-160A)</a> <br>
                 <a href="/products#product3">MP-H {{ translation[8] }} BUSBAR (160A-600A)</a> <br>
