--- a/static/css/dtm.css
+++ b/static/css/dtm.css
@@ -674,7 +674,7 @@ ul::-webkit-scrollbar-thumb {
 /* FOOTER */
 
 footer {
-  background-color: #504c4c;
+  background-color: #fff;
   font-family: 'Lato', sans-serif;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.5);
