removing hero page dot effect and hero shadow

--- a/templates/home_alt.html
+++ b/templates/home_alt.html
@@ -22,7 +22,7 @@
         </div>
       </div>
     </div>
-    <div id="zgr-background-ptn"></div>
+    <!--<div id="zgr-background-ptn"></div>-->
   </section>
   <div id="zgr-page-content"></div>  
   {% include 'nav.html' %}
