catalog 38 and hero portrait fix

--- a/templates/sertifikalar.html
+++ b/templates/sertifikalar.html
@@ -19,19 +19,19 @@
 
         </div>
         <div class="col-md-2 col-sm-12 col-xs-12 bottom cerc-alt">
-            <h5><b> Certificate1 </b></h5>
+            <h5><b>Türk Standardlarına Uygunluk Belgesi<br>008848-TSE-02/06 </b></h5>
             <img src="../static/img/certificates/certificatedisplay1.jpg" width="190" height="200" alt="">
         </div>
         <div class="col-md-2 col-sm-12 col-xs-12 bottom cerc-alt">
-            <h5><b> Certificate2</b></h5>
+            <h5><b>ISO 9001:2015</b></h5>
             <img src="../static/img/certificates/certificatedisplay2.jpg" width="190" height="200" alt="">
         </div>
         <div class="col-md-2 col-sm-12 col-xs-12 bottom cerc-alt">
-            <h5><b> Certificate3</b></h5>
+            <h5><b>EN 61439-6</b></h5>
             <img src="../static/img/certificates/certificatedisplay3.jpg" width="190" height="200" alt="">
         </div>
         <div class="col-md-2 col-sm-12 col-xs-12 bottom cerc-alt">
-            <h5><b>Certificate4 </b></h5>
+            <h5><b>G-Certi<br>ISO/IEC 27001:2013 </b></h5>
             <img src="../static/img/certificates/certificatedisplay4.jpg" width="190" height="200" alt="">
         </div>
         <div class="col-md-2 col-sm-12 col-xs-12 bottom cerc-alt">
@@ -45,10 +45,6 @@
         <div class="col-md-2 col-sm-12 col-xs-12 bottom cerc-alt">
             <h5><b>Certificate7 </b></h5>
             <img src="../static/img/certificates/certificatedisplay7.jpg" width="190" height="200" alt="">
-        </div>
-        <div class="col-md-2 col-sm-12 col-xs-12 bottom cerc-alt">
-            <h5><b>Certificate8 </b></h5>
-            <img src="../static/img/certificates/certificatedisplay8.jpg" width="190" height="200" alt="">
         </div>
         <div class="col-md-2 col-sm-12 col-xs-12 bottom cerc-alt">
             <h5><b>Certificate9 </b></h5>
