--- a/templates/home_alt.html
+++ b/templates/home_alt.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <section class="hero zgr-hero">
+  {% include 'nav.html' %}
+<!--  <section class="hero zgr-hero">
     <div class="hero-inner zgr-hero-inner" style="z-index: 2;">
       <h1>{% if session['language'] == 0 %}
         DTM Elektroteknik A.Ş.
@@ -21,11 +22,11 @@
           <a href="#zgr-page-content" class="btn zgr-btn">▼</a>
         </div>
       </div>
-    </div>
+    </div>-->
     <!--<div id="zgr-background-ptn"></div>-->
-  </section>
-  <div id="zgr-page-content"></div>  
-  {% include 'nav.html' %}
+  <!--</section>
+  <div id="zgr-page-content"></div>  -->
+  
 
   <div class="container align-self-center">
     <div class="row align-self-center mx-auto" id="cards_landscape_wrap-2">
