--- a/static/css/dtm.css
+++ b/static/css/dtm.css
@@ -38,13 +38,13 @@ a:hover {
 /* HERO */
 .hero {
   width: 100vw;
-  height: 100vh;
+  height: 40vh;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../img/busbar.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../img/busbar_1.jpg");
   background-color: #333;
   background-size: cover;
   background-position: center center;
