--- a/templates/HEAD.html
+++ b/templates/HEAD.html
@@ -5,6 +5,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
 <link href="../static/css/dtm.css" rel="stylesheet">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="../static/js/dtm.js"></script>
 <script src="https://kit.fontawesome.com/9f86d2bf15.js" crossorigin="anonymous"></script>
 <!--<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>-->
