product pictures, navbar debug, mainpage hero rework
product pictures has been cut and uploaded with necessary filepaths to display them

fixed an issue where navigation bar dropdown menu sometimes couldn't get hovered when you move the mouse too slowly

hero page have been reworked to display a video instead with less height than before

--- a/templates/products.html
+++ b/templates/products.html
@@ -67,15 +67,15 @@
           <li><b>Advantages:</b></li>
           <ul>
             <li>Quick and easy application</li>
-            <li>Hiçbir parça ilavesi olmaksızın geçme sistemi</li>
-            <li>Renkli fiş seçeneği</li>
+            <li>Grid system that doesn't require any extra pieces</li>
+            <li>Colored Plug Option</li>
           </ul>
         </ul>
         <a href="../static/img/catalog/AB-E.pdf" download="DTM AB-E Series 23-63A"><button type="button" class="btn btn-danger btn-sm btn-cata">Download AB-E Catalog</button></a>
         {% endif %}
 
       </div>
-      <div class="col-sm-12  col-md-6 invisible">
+      <div class="col-sm-12  col-md-6">
         <br><br><br>
         <div id="product1slides" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -88,19 +88,19 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://picsum.photos/600" class="d-block w-100">
+              <img src="../static/img/products/AB-E/AB-E-1.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/500" class="d-block w-100">
+              <img src="../static/img/products/AB-E/AB-E-2.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100">
+              <img src="../static/img/products/AB-E/AB-E-3.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100">
+              <img src="../static/img/products/AB-E/AB-E-4.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100">
+              <img src="../static/img/products/AB-E/AB-E-5.jpg" class="d-block w-100">
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
               buildings etc.</b></li><br>
           <li><b>Series:</b> 100 Amp. - 160 Amp.</li><br>
           <li><b>Voltage:</b> 690 V</li><br>
-          <li><b>Conductor:</b> &nbsp;Copper or Aluminum, tin coated all over</li><br>
+          <li><b>Conductor:</b>&nbsp;Copper or Aluminum, tin coated all over</li><br>
           <li><b>Case:</b> Galvanized or stainless upon request</li><br>
           <li><b>Configuration</b>
             <ul>
@@ -168,32 +168,12 @@
         <a href="../static/img/catalog/SP-H.pdf" download="DTM SP-H Series 100-160A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">Download SP-H Catalog</button></a>
         {% endif %}
       </div>
-      <div class="col-sm-12  col-md-6 invisible">
+      <div class="col-sm-12  col-md-6">
         <br><br><br>
         <div id="product2slides" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#product2slides" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#product2slides" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#product2slides" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#product2slides" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#product2slides" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://picsum.photos/600" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="https://picsum.photos/500" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
+              <img src="../static/img/products/SP-H/SP-H-1.jpg" class="d-block w-100" alt="">
             </div>
           </div>
         </div>
@@ -241,7 +221,7 @@
           <li><b>Conductor:</b>&nbsp;Copper or Aluminum, tin coated all over</li><br>
           <li><b>Protection:</b> IP 55</li><br>
           <li><b>Case:</b> Galvanized sheet or Aluminum</li><br>
-          <li><b>Konfigurasyon</b>
+          <li><b>Configuration</b>
             <ul>
               <li> 3P + N + PE (4P)</li>
               <li> 3P + N + PE + FE1 (5P)</li>
@@ -258,7 +238,7 @@
         <a href="../static/img/catalog/MP-H.pdf" download="DTM MP-H Series 160-600A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">Download MP-H Catalog</button></a>
         {% endif %}
       </div>
-      <div class="col-sm-12  col-md-6 invisible">
+      <div class="col-sm-12  col-md-6">
         <br><br><br>
         <div id="product3slides" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -267,23 +247,19 @@
             <button type="button" data-bs-target="#product3slides" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#product3slides" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#product3slides" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#product3slides" data-bs-slide-to="4" aria-label="Slide 5"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://picsum.photos/600" class="d-block w-100" alt="">
+              <img src="../static/img/products/MP-H/MP-H-1.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/500" class="d-block w-100" alt="">
+              <img src="../static/img/products/MP-H/MP-H-2.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
+              <img src="../static/img/products/MP-H/MP-H-3.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
+              <img src="../static/img/products/MP-H/MP-H-4.jpg" class="d-block w-100" alt="">
             </div>
           </div>
         </div>
@@ -362,7 +338,7 @@
         <a href="../static/img/catalog/HP-K.pdf" download="HP-K Series 400-6300A.pdf"><button type="button" class="btn btn-danger btn-sm btn-cata">Download HP-K Catalog</button></a>
         {% endif %}
       </div>
-      <div class="col-sm-12  col-md-6 invisible">
+      <div class="col-sm-12  col-md-6 ">
         <br><br><br>
         <div id="product4slides" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -375,19 +351,19 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://picsum.photos/600" class="d-block w-100" alt="">
+              <img src="../static/img/products/HP-K/HP-K-1.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/500" class="d-block w-100" alt="">
+              <img src="../static/img/products/HP-K/HP-K-2.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
+              <img src="../static/img/products/HP-K/HP-K-3.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
+              <img src="../static/img/products/HP-K/HP-K-4.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="https://picsum.photos/400" class="d-block w-100" alt="">
+              <img src="../static/img/products/HP-K/HP-K-5.jpg" class="d-block w-100" alt="">
             </div>
           </div>
         </div>
