--- a/static/css/dtm.css
+++ b/static/css/dtm.css
@@ -12,12 +12,12 @@ ul {
 }
 
 a:hover {
-  color:var(--dtm-red);
+  color: var(--dtm-red);
 }
 
 #navbarat {
   background: #fff;
-  color:var(--dtm-red);
+  color: var(--dtm-red);
   font-family: 'Lato', sans-serif;
   padding: 0;
   margin: 0;
@@ -30,14 +30,14 @@ a:hover {
   background: none !important;
 }
 
-#switchlang > img {
+#switchlang>img {
   height: 24px;
   width: 24px;
 }
 
 /* HERO */
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   display: flex;
   justify-content: center;
@@ -52,25 +52,14 @@ a:hover {
 }
 
 .hero h1 {
-  font-size: 55px;
+  font-size: 50px;
   margin-top: 0;
   margin-bottom: 0.5em;
+  color: #FFF;
 }
 
-.hero .btn {
-  width: 55px; height: 55px;
-  display: block;
-  padding: 10px;
-  margin: 0 auto 0 auto;
-  color: white;
-  text-decoration: none;
-  background-color: #ae1227;
-  transition: scale 100ms ease;
-}
-
-.hero .btn:hover {
-  scale: 1.05;
-  background-color: #cf6666;
+#bg-video {
+  margin-top: -8% !important;
 }
 
 .video-overlay {
@@ -89,6 +78,23 @@ a:hover {
   top: 70%;
   text-align: center;
 }
+
+.hero .btn {
+  width: 55px;
+  height: 55px;
+  display: block;
+  padding: 10px;
+  margin: 0 auto 0 auto;
+  color: white;
+  text-decoration: none;
+  background-color: #ae1227;
+  transition: scale 100ms ease;
+}
+
+.hero .btn:hover {
+  scale: 1.05;
+  background-color: #cf6666;
+}
 /* NAVIGATION */
 
 .menu li {
@@ -97,7 +103,7 @@ a:hover {
 
 .navsection {
   background-color: #F5F5F5;
-  align-items: center!important;
+  align-items: center !important;
 }
 
 .navbar {
@@ -121,7 +127,7 @@ a:hover {
   font-size: 18px;
 }
 
-.menu li:hover > a {
+.menu li:hover>a {
   transition: 0.3s ease;
   z-index: 6;
 }
@@ -145,6 +151,7 @@ a:hover {
 }
 
 .dropdown li {
+  margin-top: -0.5em !important;
   padding: 0.5em;
   width: 16em;
   text-align: center;
@@ -302,7 +309,7 @@ input[type=checkbox] {
 }
 
 #cards_landscape_wrap-2 .card-flyer .text-box p a {
-  color:var(--dtm-red);
+  color: var(--dtm-red);
 }
 
 #cards_landscape_wrap-2 .card-flyer .text-box p a:hover {
@@ -319,142 +326,13 @@ input[type=checkbox] {
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
   letter-spacing: 1px;
-  color:var(--dtm-red);
+  color: var(--dtm-red);
 }
 
 
 /* CARD HOVER END*/
 
-/* accordion*/
-#acccc {
-  border-right: none
-}
-
-.ac-container {
-  max-width: 600px;
-  border: 3px #000000;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  /*width: 100%;*/
-  margin: 50px 0 30px 0;
-  text-align: left;
-}
-
-.ac-container label {
-  height: 30px !important;
-  line-height: 21px !important;
-  font-size: 20px !important;
-  font-family: 'Lato', sans-serif !important;
-  padding: 5px 20px;
-  position: relative;
-  z-index: 20;
-  display: block;
-  height: 30px;
-  cursor: pointer;
-  color: rgb(0, 0, 0);
-  line-height: 33px;
-  font-size: 19px;
-  background: #fff;
-  background: -moz-linear-gradient(top, #eaeaea);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(100%, #eaeaea));
-  background: -webkit-linear-gradient(top, #eaeaea);
-  background: -o-linear-gradient(top, #eaeaea);
-  background: -ms-linear-gradient(top, #eaeaea);
-  background: linear-gradient(top, #eaeaea);
-  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3), 1px 0 0 rgba(255, 255, 255, 0.9) inset, 0 2px 2px rgba(0, 0, 0, 0.1);
-  font-size: 12px;
-  height: 30px;
-  line-height: 20px;
-}
-
-.ac-container label:hover {
-  background: #97979779;
-}
-
-.ac-container input:checked+label,
-.ac-container input:checked+label:hover {
-  background: #97979779;
-  border-color:#97979779 ;
-  color:var(--dtm-red);
-  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3), 0 2px 2px rgba(0, 0, 0, 0.1);
-  height: 30px;
-  line-height: 21px;
-  font-size: 22px;
-  font-weight: bold;
-}
-
-.ac-container label:hover:after,
-.ac-container input:checked+label:hover:after {
-  content: '';
-  position: absolute;
-  width: 24px;
-  height: 24px;
-  right: 13px;
-  top: 7px;
-  background: transparent url() no-repeat center center;
-}
-
-.ac-container input:checked+label:hover:after {
-  background-image: url();
-}
-
-.ac-container input {
-  display: none;
-}
-
-.ac-container article {
-  background: rgba(255, 255, 255, 0.7);
-  margin-top: 0px;
-  overflow: hidden;
-  height: 0;
-  position: relative;
-  z-index: 10;
-  -webkit-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
-  -moz-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
-  -o-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
-  -ms-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
-  transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
-}
-
-.ac-container article p {
-  font-style: normal;
-  color: rgb(0, 0, 0);
-  line-height: 30px;
-  font-size: 16px;
-  padding: 20px;
-  font-family: 'Lato' sans-serif;
-  font: normal normal 16px;
-}
-
-.ac-container input:checked~article {
-  -webkit-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
-  -moz-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
-  -o-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
-  -ms-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
-  transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
-  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3);
-}
-
-.ac-container input:checked~article.ac-alk {
-  height: 150px;
-}
-
-.ac-container input:checked~article.ac-izol {
-  height: 210px;
-}
-
-.ac-container input:checked~article.ac-ilet {
-  height: 120px;
-}
-
-.ac-container input:checked~article.ac-uygl {
-  height: 260px;
-}
-
-/* ACCORDION END*/
 /* OWL CAROUSEL*/
-
-
 
 /* SIDE CARD WITH HOVER POP */
 .cards {
@@ -528,7 +406,9 @@ input[type=checkbox] {
 /* BASIC PAGE MAIN TEXT END */
 
 /* TOP IMAGE W TEXT */
-#hizmetler, #kurumsal , #iletisim {
+#hizmetler,
+#kurumsal,
+#iletisim {
   background-image: url("../img/bg_red.png");
 }
 
@@ -537,7 +417,7 @@ input[type=checkbox] {
 }
 
 #phonenmbr p {
-  color:var(--dtm-red);
+  color: var(--dtm-red);
   font-family: 'Lato', sans-serif;
   font-size: 28px;
   text-align: center;
@@ -670,16 +550,15 @@ footer {
   font-size: large;
 }
 
-
 /* REFERANSLAR */
 
 #references .card {
   box-shadow: none;
   margin: 1rem;
   width: 20rem;
-  height: 16rem; 
+  height: 16rem;
   color: #000;
-  background-color:#fff ;
+  background-color: #fff;
 
 }
 
@@ -692,9 +571,11 @@ footer {
   background-color: #c20000;
 
 }
-#references .card:hover img{
-  padding-top: 0 !important; 
+
+#references .card:hover img {
+  padding-top: 0 !important;
 }
+
 #references .card .content {
   font-family: 'Lato', sans-serif;
 }
@@ -705,7 +586,6 @@ footer {
   padding: auto;
   font-family: 'Lato', sans-serif;
 }
-
 
 #references .card .content h4 {
   visibility: hidden;
@@ -734,9 +614,6 @@ footer {
   padding-top: 20%;
   margin-top: 0;
 }
-
-
-
 
 /* ILETISIM */
 
@@ -888,7 +765,7 @@ footer {
 .flip-card-front h2 {
   font-style: italic;
   font-weight: 500;
-  font-family: 'Lato' ,sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: #cc000090;
   color: rgb(39, 39, 39);
 }
@@ -898,3 +775,131 @@ footer {
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
+
+/* accordion*/
+#acccc {
+  border-right: none
+}
+
+.ac-container {
+  max-width: 600px;
+  border: 3px #000000;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  /*width: 100%;*/
+  margin: 50px 0 30px 0;
+  text-align: left;
+}
+
+.ac-container label {
+  height: 30px !important;
+  line-height: 21px !important;
+  font-size: 20px !important;
+  font-family: 'Lato', sans-serif !important;
+  padding: 5px 20px;
+  position: relative;
+  z-index: 20;
+  display: block;
+  height: 30px;
+  cursor: pointer;
+  color: rgb(0, 0, 0);
+  line-height: 33px;
+  font-size: 19px;
+  background: #fff;
+  background: -moz-linear-gradient(top, #eaeaea);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(100%, #eaeaea));
+  background: -webkit-linear-gradient(top, #eaeaea);
+  background: -o-linear-gradient(top, #eaeaea);
+  background: -ms-linear-gradient(top, #eaeaea);
+  background: linear-gradient(top, #eaeaea);
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3), 1px 0 0 rgba(255, 255, 255, 0.9) inset, 0 2px 2px rgba(0, 0, 0, 0.1);
+  font-size: 12px;
+  height: 30px;
+  line-height: 20px;
+}
+
+.ac-container label:hover {
+  background: #97979779;
+}
+
+.ac-container input:checked+label,
+.ac-container input:checked+label:hover {
+  background: #97979779;
+  border-color: #97979779;
+  color: var(--dtm-red);
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3), 0 2px 2px rgba(0, 0, 0, 0.1);
+  height: 30px;
+  line-height: 21px;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.ac-container label:hover:after,
+.ac-container input:checked+label:hover:after {
+  content: '';
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  right: 13px;
+  top: 7px;
+  background: transparent url() no-repeat center center;
+}
+
+.ac-container input:checked+label:hover:after {
+  background-image: url();
+}
+
+.ac-container input {
+  display: none;
+}
+
+.ac-container article {
+  background: rgba(255, 255, 255, 0.7);
+  margin-top: 0px;
+  overflow: hidden;
+  height: 0;
+  position: relative;
+  z-index: 10;
+  -webkit-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+  -moz-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+  -o-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+  -ms-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+  transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+}
+
+.ac-container article p {
+  font-style: normal;
+  color: rgb(0, 0, 0);
+  line-height: 30px;
+  font-size: 16px;
+  padding: 20px;
+  font-family: 'Lato' sans-serif;
+  font: normal normal 16px;
+}
+
+.ac-container input:checked~article {
+  -webkit-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+  -moz-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+  -o-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+  -ms-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+  transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3);
+}
+
+.ac-container input:checked~article.ac-alk {
+  height: 150px;
+}
+
+.ac-container input:checked~article.ac-izol {
+  height: 210px;
+}
+
+.ac-container input:checked~article.ac-ilet {
+  height: 120px;
+}
+
+.ac-container input:checked~article.ac-uygl {
+  height: 260px;
+}
+
+/* ACCORDION END*/
