--- a/templates/home_alt.html
+++ b/templates/home_alt.html
@@ -10,17 +10,15 @@
 
 <body>
   {% include 'nav.html' %}
-  <section class="hero zgr-hero">
+  <section class="hero">
     <video autoplay muted loop id="bg-video">
       <source src="../static/img/hero.mp4" type="video/mp4" />
     </video>
-    <div class="video-overlay header-text">
+    <div class="video-overlay">
       <div class="container">
-        <div class="caption">
-          <h2>DTM Elektroteknik</h2>
-          <div class="main-button-red">
-            <div class="scroll-to-section"><a href="#contact">Bize Ulaşın</a></div>
-          </div>
+        <div class="caption align-self-center">
+          <h1>{{ translation[17] }}</h1>
+          <h4>{{ translation[27] }}</h4>
         </div>
       </div>
     </div>
